[package]
name = "supermarket_together_pricing_accessibility"
version = "0.1.0"
edition = "2024"

default-run = "supermarket_together_pricing_accessibility"

[dependencies]
# send keyboard inputs
# need to use the version from git since the crates version is not updated yet
enigo = { git = "https://github.com/enigo-rs/enigo.git" }
device_query = "4.0"
